dodanie sekcji benefits

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ header {
 
 .menu_container div {
     padding: 28px;
+    margin: 0 20px;
 }
 
 .menu_container div:hover {
@@ -59,8 +60,9 @@ header {
 .menu_container div a {
     text-decoration: none;
     font-family: var(--font-open-sans);
-    font-weight: bold;
+    font-weight: 700;
     font-size: 11px;
+    letter-spacing: 2px;
     color: var(--color-grey)
 }
 
@@ -111,19 +113,18 @@ main {
 .stats_title {
     font-family: var(--font-raleway);
     font-size: 36px;
-    margin: 100px 0 0 0;
+    margin: 100px 0;
 }
 
 .stats_container {
     width: 800px;
-    height: 300px;
     display: flex;
     justify-content: space-around;
+    margin: 0 0 100px 0;
 }
 
 .stats_card {
     flex-basis: 200px;
-    height: 300px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -147,7 +148,6 @@ main {
     font-weight: 800;
     font-size: 20px;
     margin: 20px;
-
 }
 
 .stat_description {
@@ -167,4 +167,169 @@ main {
 .stats_card:nth-child(3) .stats_circle {
     background-color: var(--color-green);
 }
+
+#benefits {
+    width: 100%;
+    height: 1395px;
+    background-color: var(--color-light-grey) ;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.benefits_container {
+    width: 1124px;
+    height: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.benefits_container_block {
+    width: 100%;
+    height: 370px;
+    display: flex;
+    justify-content: stretch;
+    border: 1px solid #E8E9ED;
+    border-radius: 5px;
+}
+
+.block1_left {
+    background-color: var(--color-white);
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 50px 35px;
+}
+
+.block1_right {
+    background-color:var(--color-white);
+    width: 40%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.benefits_title {
+    font-family: var(--font-raleway);
+    font-size: 36px;
+}
+
+.benefits_description {
+    font-family: var(--font-open-sans);
+    font-size: 16px;
+}
+
+.benefits_line {
+    width: 327px;
+    height: 4px;
+    background-color: var(--color-redish) ;
+
+}
+
+.laptop {
+    width: 386px;
+    height: 219px;
+    margin: 0 0 40px 0;
+    z-index: 1;
+}
+
+.red_box {
+    width: 200px;
+    height: 200px;
+    transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+    border-radius: 41px;
+    background-color: var(--color-redish);
+    position: absolute;
+    right: 10%;
+    top: 20%;
+    z-index: 0;
+}
+
+
+.block2_left {
+    background-color: var(--color-white);
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 50px 35px;
+    position: relative;
+}
+
+.block2_right {
+    background-color:var(--color-white);
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 50px;
+}
+
+.iphone {
+    width: 426px;
+    height: 328px;
+    z-index: 1;
+}
+
+.blue_circle {
+    width: 320px;
+    height: 320px;
+    background-color: #07ACE6;
+    border-radius: 50%;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    z-index: 0;
+}
+
+.block2_right .benefits_line {
+    background-color: #08A6E4;
+}
+
+.benefits_container_block:nth-of-type(3) {
+    border: none;
+}
+
+
+.block3_left {
+    background-color: var(--color-white);
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 50px 35px;
+    border: 1px solid #E8E9ED;
+}
+
+.block3_left .benefits_line {
+    background-color: var(--color-green) ;
+}
+
+
+.block3_right {
+    margin: 0 0 0 auto;
+    background-color: var(--color-green);
+    width: 37%;
+    border: 1px solid #E8E9ED;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.trumpet {
+    width: 296px;
+    height: 208px;
+}
+
+
+
+
+
+
+
+
 
