--- a/css/style.css
+++ b/css/style.css
@@ -327,16 +327,15 @@ main {
 
 #prices {
     width: 100%;
-    height: 700px;
+    height: 800px;
     background-color: var(--color-white) ;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-direction: column;
+    align-items: center;
 }
 
 .prices_title {
-    text-align: center;
-    margin: 100px 0 50px 0;
     font-size: 36px;
     font-family: var(--font-raleway);
     font-weight: 500;
@@ -347,7 +346,6 @@ main {
 .prices_container {
     width: 1266px;
     height: 616px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -439,6 +437,45 @@ main {
 
 .prices_container_card:nth-of-type(2) .begin_button {
     background-color: #07ACE6;
+}
+
+#contact {
+    width: 100%;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.contact_info {
+    width: 440px;
+    }
+.contact_form {
+    width: 440px;
+    border: 1px solid black;
+}
+
+.contact_info_title {
+    font-size: 49px;
+    font-family: var(--font-raleway);
+    margin: 30px 0;
+}
+
+.contact_info_description {
+    font-family: var(--font-open-sans);
+    font-size: 16px;
+
+}
+.contact_info_details {
+    margin: 20px 0;
+}
+
+.mail_adr, .phone_number {
+    text-decoration: none;
+    font-family: var(--font-open-sans);
+    font-weight: 600;
+    color: var(--color-grey);
+    margin: 0 5px;
 }
 
 
