dodanie sekcji contact

--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,6 @@ main {
     }
 .contact_form {
     width: 440px;
-    border: 1px solid black;
 }
 
 .contact_info_title {
@@ -477,6 +476,72 @@ main {
     color: var(--color-grey);
     margin: 0 5px;
 }
+
+.contact_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.form_label {
+    font-family: var(--font-open-sans);
+    font-size: 11px;
+    color: var(--color-primary);
+    letter-spacing: 3px;
+    font-weight: bold;
+}
+
+.form_field {
+    border: none;
+    border-bottom: 1px solid var(--color-grey);
+}
+
+.form_consent {
+    display: flex;
+}
+
+.form_consent input {
+    display: none;
+}
+
+input[type="checkbox"] + span {
+    height: 1px;
+    padding: 10px;
+    margin-right: 10px;
+    border: 1px solid var(--color-grey);
+    border-radius: 5px;
+}
+
+input[type="checkbox"]:checked + span {
+    background-image: url("../assets/Checkmark.svg");
+    background-size: 10px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.consent_text {
+    color: var(--color-grey);
+    font-family: var(--font-open-sans);
+    font-size: 12px;
+    line-height: 15px;
+}
+
+.send_button {
+    align-self: flex-end;
+    text-decoration: none;
+    padding: 20px 100px;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    box-shadow: 5px 10px 14px #07ACE629;
+    border-radius: 35px;
+    font-family: var(--font-open-sans);
+    font-size: 12px;
+    font-weight: bold;
+}
+
+
+
+
 
 
 
