konfiguracja gulp i przygotowanie środowiska sass

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,8 @@ main {
     background-color: var(--color-primary);
     box-shadow: 5px 10px 14px #07ACE629;
     border-radius: 40px;
+    font-family: var(--font-open-sans);
+    font-size: 16px;
 }
 
 #stats {
