--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,14 @@
 @import "generic/reset";
 @import "generic/grid";
-@import "settings";
-@import "elements";
+@import "settings/colors";
+@import "settings/fonts";
+@import "settings/mixins";
+
+//Elements
+@import "elements/base";
+@import "elements/header";
+@import "elements/main-section";
+@import "elements/stats";
+@import "elements/benefits";
+@import "elements/prices";
+@import "elements/contact";
