--- a/scss/settings/_mixins.scss
+++ b/scss/settings/_mixins.scss
@@ -1,5 +1,11 @@
+@mixin desktop {
+  @media screen and (min-width: 1360px) {
+    @content;
+  }
+}
+
 @mixin tablet {
-  @media screen and (max-width: 1360px) {
+  @media screen and (min-width: 850px) and (max-width: 1360px) {
     @content;
   }
 }
