--- a/css/main.css
+++ b/css/main.css
@@ -475,6 +475,7 @@ header {
   font-family: "Raleway", sans-serif;
   font-weight: normal;
   color: #08A6E4;
+  padding-left: 10px;
 }
 
 .menu_container {
@@ -520,6 +521,7 @@ header {
 .hamburger_menu {
   height: 1px;
   padding: 30px;
+  cursor: pointer;
 }
 @media screen and (min-width: 850px) and (max-width: 1360px) {
   .hamburger_menu {
@@ -573,25 +575,28 @@ main {
   flex-direction: column;
   align-items: center;
 }
+@media screen and (max-width: 850px) {
+  main {
+    background-size: 200%;
+    padding: 30px;
+  }
+}
 
 .main_title {
   font-family: "Raleway", sans-serif;
   font-size: 49px;
   margin: 200px 0 0 0;
 }
-@media screen and (min-width: 850px) and (max-width: 1360px) {
-  .main_title {
-    margin: 50px 0 0 0;
-  }
-}
 
 .main_description {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   margin: 20px 0 38px 0;
+  text-align: center;
 }
 
 .main_cta {
+  text-align: center;
   text-decoration: none;
   color: #FFFFFF;
   padding: 22px 157px;
@@ -600,6 +605,12 @@ main {
   border-radius: 40px;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
+}
+@media screen and (max-width: 850px) {
+  .main_cta {
+    padding: 22px 50px;
+    width: 80vw;
+  }
 }
 
 #stats {
