--- a/css/main.css
+++ b/css/main.css
@@ -453,7 +453,7 @@ header {
   display: flex;
   justify-content: space-between;
 }
-@media screen and (min-width: 850px) and (max-width: 1360px) {
+@media screen and (max-width: 1360px) {
   .header_container {
     width: 100%;
   }
@@ -523,14 +523,19 @@ header {
   padding: 30px;
   cursor: pointer;
 }
-@media screen and (min-width: 850px) and (max-width: 1360px) {
+@media screen and (min-width: 1360px) {
   .hamburger_menu {
     display: none;
   }
 }
-@media screen and (min-width: 1360px) {
+@media screen and (max-width: 1360px) {
   .hamburger_menu {
     display: none;
+  }
+}
+@media screen and (max-width: 850px) {
+  .hamburger_menu {
+    display: block;
   }
 }
 .hamburger_menu .hamburger_line {
@@ -686,7 +691,6 @@ main {
 
 #benefits {
   width: 100%;
-  height: 1395px;
   background-color: #F7F7F7;
   display: flex;
   justify-content: center;
@@ -695,20 +699,34 @@ main {
 
 .benefits_container {
   width: 1124px;
-  height: 90%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
+@media screen and (max-width: 1360px) {
+  .benefits_container {
+    width: 100%;
+  }
+}
 
 .benefits_container_block {
-  width: 100%;
+  margin-top: 100px;
   height: 370px;
   display: flex;
   justify-content: stretch;
   border: 1px solid #E8E9ED;
   border-radius: 5px;
+}
+@media screen and (max-width: 1360px) {
+  .benefits_container_block {
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+}
+.benefits_container_block:last-of-type {
+  margin-bottom: 180px;
 }
 
 .block1_left {
@@ -719,6 +737,12 @@ main {
   justify-content: space-around;
   padding: 50px 35px;
 }
+@media screen and (max-width: 1360px) {
+  .block1_left {
+    width: 80%;
+    height: 20em;
+  }
+}
 
 .block1_right {
   background-color: #FFFFFF;
@@ -727,6 +751,13 @@ main {
   display: flex;
   justify-content: center;
   align-items: end;
+}
+@media screen and (max-width: 1360px) {
+  .block1_right {
+    width: 80%;
+    padding: 0 0 100px 0;
+    align-items: center;
+  }
 }
 
 .benefits_title {
@@ -773,6 +804,13 @@ main {
   padding: 50px 35px;
   position: relative;
 }
+@media screen and (max-width: 1360px) {
+  .block2_left {
+    width: 80%;
+    margin: 0 auto;
+    align-items: center;
+  }
+}
 
 .block2_right {
   background-color: #FFFFFF;
@@ -781,6 +819,13 @@ main {
   flex-direction: column;
   justify-content: space-around;
   padding: 50px;
+}
+@media screen and (max-width: 1360px) {
+  .block2_right {
+    padding: 0 50px 50px 50px;
+    width: 80%;
+    height: 15em;
+  }
 }
 
 .iphone {
@@ -817,6 +862,12 @@ main {
   padding: 50px 35px;
   border: 1px solid #E8E9ED;
 }
+@media screen and (max-width: 1360px) {
+  .block3_left {
+    width: 80%;
+    height: 20em;
+  }
+}
 
 .block3_left .benefits_line {
   background-color: #55DFB4;
@@ -830,6 +881,13 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 1360px) {
+  .block3_right {
+    width: 80%;
+    margin: 0 auto;
+    height: 20em;
+  }
 }
 
 .trumpet {
