--- a/scss/settings/_mixins.scss
+++ b/scss/settings/_mixins.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin tablet {
-  @media screen and (min-width: 850px) and (max-width: 1360px) {
+  @media screen and (max-width: 1360px) {
     @content;
   }
 }
