--- a/scss/elements/_benefits.scss
+++ b/scss/elements/_benefits.scss
@@ -28,9 +28,10 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
+    border: none;
     }
   &:last-of-type {
-    margin-bottom: 180px;
+    margin-bottom: 100px;
   }
 }
 
@@ -43,7 +44,7 @@
   padding: 50px 35px;
   @include tablet {
     width: 80%;
-    height: 20em;
+    height: 23em;
   }
 }
 
@@ -69,10 +70,11 @@
 .benefits_description {
   font-family: $font-open-sans;
   font-size: 16px;
+  margin: 10px 0;
 }
 
 .benefits_line {
-  width: 327px;
+  width: 70%;
   height: 4px;
   background-color: $color-redish ;
 
@@ -110,6 +112,7 @@
     width: 80%;
     margin: 0 auto;
     align-items: center;
+    padding: 0;
   }
 }
 
@@ -121,10 +124,8 @@
   justify-content: space-around;
   padding: 50px;
   @include tablet {
-    padding: 0 50px 50px 50px;
     width: 80%;
-    height: 15em;
-
+    height: 25em;
   }
 }
 
@@ -164,7 +165,7 @@
   border: 1px solid #E8E9ED;
   @include tablet {
     width: 80%;
-    height: 20em;
+    height: 25em;
   }
 }
 
@@ -174,7 +175,7 @@
 
 
 .block3_right {
-  margin: 0 0 0 auto;
+  margin: 0 auto 0 auto;
   background-color: $color-green;
   width: 37%;
   border: 1px solid #E8E9ED;
