--- a/scss/elements/_prices.scss
+++ b/scss/elements/_prices.scss
@@ -36,14 +36,29 @@
   font-family: $font-open-sans;
   font-size: 14px;
   font-weight: 600;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  position: relative;
   @include tablet {
     margin-bottom: 100px;
   }
+  @include mobile {
+    width: 80vw;
+    padding: 0;
+    height: 350px;
+    flex-direction: row;
+  }
+}
+
+.prices_container_card_left_side-mobile, .prices_container_card_right_side-mobile {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+  height: 50%;
 }
 
 .package {
@@ -108,6 +123,10 @@
   box-shadow: 5px 10px 27px #07ACE629;;
   border: 1px solid $color-primary;
   border-radius: 18px;
+  @include mobile {
+    width: 90vw;
+    height: 380px;
+  }
 }
 
 .prices_container_card:nth-of-type(2) .price {
