dodanie responsywnosci do sekcji contact

--- a/css/main.css
+++ b/css/main.css
@@ -906,6 +906,11 @@ main {
   flex-direction: column;
   align-items: center;
 }
+@media screen and (min-width: 1360px) {
+  #prices {
+    margin: 50px 0 100px 0;
+  }
+}
 
 .prices_title {
   font-size: 36px;
@@ -924,6 +929,7 @@ main {
 @media screen and (max-width: 1360px) {
   .prices_container {
     flex-direction: column;
+    width: 100%;
   }
 }
 
@@ -945,10 +951,6 @@ main {
 @media screen and (max-width: 1360px) {
   .prices_container_card {
     margin-bottom: 100px;
-  }
-}
-@media screen and (max-width: 850px) {
-  .prices_container_card {
     width: 80vw;
     padding: 0;
     height: 350px;
@@ -1028,7 +1030,7 @@ main {
   border: 1px solid #08A6E4;
   border-radius: 18px;
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1360px) {
   .prices_container_card:nth-of-type(2) {
     width: 90vw;
     height: 380px;
@@ -1045,18 +1047,44 @@ main {
 
 #contact {
   width: 100%;
-  height: 450px;
+  height: 500px;
   display: flex;
   justify-content: center;
   align-items: stretch;
+}
+@media screen and (max-width: 850px) {
+  #contact {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: auto;
+    padding: 10px;
+  }
 }
 
 .contact_info {
   width: 440px;
 }
+@media screen and (max-width: 850px) {
+  .contact_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+  }
+}
 
 .contact_form {
   width: 440px;
+}
+@media screen and (max-width: 850px) {
+  .contact_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 300px;
+    width: 100%;
+  }
 }
 
 .contact_info_title {
@@ -1089,7 +1117,7 @@ main {
 }
 
 .form_label {
-  font-family: var(--font-open-sans);
+  font-family: "Open Sans", sans-serif;
   font-size: 11px;
   color: #08A6E4;
   letter-spacing: 3px;
