--- a/scss/elements/_contact.scss
+++ b/scss/elements/_contact.scss
@@ -1,16 +1,36 @@
 #contact {
   width: 100%;
-  height: 450px;
+  height: 500px;
   display: flex;
   justify-content: center;
   align-items: stretch;
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: auto;
+    padding: 10px;
+  }
 }
 
 .contact_info {
   width: 440px;
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+  }
 }
 .contact_form {
   width: 440px;
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 300px;
+    width: 100%;
+  }
 }
 
 .contact_info_title {
@@ -43,7 +63,7 @@
 }
 
 .form_label {
-  font-family: var(--font-open-sans);
+  font-family: $font-open-sans;
   font-size: 11px;
   color: $color-primary;
   letter-spacing: 3px;
