--- a/scss/elements/_prices.scss
+++ b/scss/elements/_prices.scss
@@ -6,6 +6,9 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  @include desktop {
+    margin: 50px 0 100px 0;
+  }
 }
 
 .prices_title {
@@ -24,6 +27,7 @@
   align-items: center;
   @include tablet {
     flex-direction: column;
+    width: 100%;
   }
 }
 
@@ -43,8 +47,6 @@
   align-items: center;
   @include tablet {
     margin-bottom: 100px;
-  }
-  @include mobile {
     width: 80vw;
     padding: 0;
     height: 350px;
@@ -123,7 +125,7 @@
   box-shadow: 5px 10px 27px #07ACE629;;
   border: 1px solid $color-primary;
   border-radius: 18px;
-  @include mobile {
+  @include tablet {
     width: 90vw;
     height: 380px;
   }
