--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,4 +11,5 @@
 @import "elements/stats";
 @import "elements/benefits";
 @import "elements/prices";
+@import "elements/calculator";
 @import "elements/contact";
