--- a/css/main.css
+++ b/css/main.css
@@ -1112,7 +1112,7 @@ main {
 }
 .calc__select .select__input::after {
   content: "";
-  background-image: url("./assets/Arrow Down.svg");
+  background-image: url("../assets/Arrow Down.svg");
   width: 22px;
   height: 22px;
   display: block;
