--- a/scss/elements/_calculator.scss
+++ b/scss/elements/_calculator.scss
@@ -67,7 +67,7 @@
 
       &::after {
         content: "";
-        background-image: url("./assets/Arrow Down.svg");
+        background-image: url("../assets/Arrow Down.svg");
         width: 22px;
         height: 22px;
         display: block;
