--- a/scss/elements/_prices.scss
+++ b/scss/elements/_prices.scss
@@ -138,3 +138,16 @@
 .prices_container_card:nth-of-type(2) .begin_button {
   background-color: #07ACE6;
 }
+
+.prices_container_card:nth-of-type(3) {
+  border: 1px solid $color-green;
+  border-radius: 18px;
+}
+
+.prices_container_card:nth-of-type(3) .price {
+  color: $color-green;
+}
+
+.prices_container_card:nth-of-type(3) .begin_button {
+  background-color: $color-green;
+}
