--- a/scss/elements/_contact.scss
+++ b/scss/elements/_contact.scss
@@ -92,7 +92,7 @@
 }
 
 .custom_checkbox:checked + span {
-  background-image: url("/assets/Checkmark.svg");
+  background-image: url("../assets/Checkmark.svg");
   background-size: 10px;
   background-position: center;
   background-repeat: no-repeat;
