--- a/scss/elements/_main-section.scss
+++ b/scss/elements/_main-section.scss
@@ -1,7 +1,7 @@
 main {
   width: 100%;
   height: calc(100vh - 70px);
-  background-image: url("/assets/Background.png");
+  background-image: url("../assets/Background.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
