--- a/scss/elements/_prices.scss
+++ b/scss/elements/_prices.scss
@@ -103,7 +103,7 @@
   content: " ";
   padding: 6px;
   margin: 5px;
-  background-image: url("/assets/Ckechmark-1.svg");
+  background-image: url("../assets/Ckechmark-1.svg");
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -114,7 +114,7 @@
   content: " ";
   padding: 6px;
   margin: 5px;
-  background-image: url("/assets/Close.svg");
+  background-image: url("../assets/Close.svg");
   background-position: center;
   background-repeat: no-repeat;
 }
