--- a/css/main.css
+++ b/css/main.css
@@ -441,6 +441,11 @@ textarea {
   box-sizing: border-box;
 }
 
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 header {
   width: 100%;
   box-shadow: 0 3px 6px #00000029;
